tests/errors/invoke-max-trig-too-often.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 3 >= 5
   ┌─ tests/errors/invoke-max-trig-too-often.fil:12:3
   │
 3 │     @interface<G, 5> go_G: 1,
   │     ------------------------ Interface requires event to trigger once in 5 cycles
   ·
 9 │   @interface<L, 3> go_L: 1
   │   ------------------------ Provided event may trigger every 3 cycles
   ·
12 │   m0 := invoke M<max(T+1, L+4)>;
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Event provided to invoke pulses more often than @interface allows

